--- a/index.html
+++ b/index.html
@@ -30,13 +30,67 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- ? -->
+
+    <button id="js-button">Show</button>
+    <ul id="js-list"></ul>
+
+    <!-- ? -->
+    <!-- <div class="container">
+      <button class="sing-btn">Sing up</button>
+    </div>
+
+    <div class="wrap__modal">
+      <div class="modal-content">
+        <h2 class="title__form">Sing up</h2>
+        <form class="form__modal" action="">
+          <input
+            class="input__modal"
+            type="text"
+            id="js-username"
+            placeholder="Username"
+          />
+          <input
+            class="input__modal"
+            type="email"
+            id="js-email"
+            placeholder="Email"
+          />
+          <input
+            class="input__modal"
+            type="password"
+            id="js-password"
+            placeholder="Password"
+          />
+          <input
+            class="input__modal"
+            type="password"
+            id="js-password-confirm"
+            placeholder="Confirm Password"
+          />
+          <div class="check-wrap">
+            <p class="check__text">I agree to the terms</p>
+            <input
+              type="checkbox"
+              name=""
+              class="check__modal"
+              id="js-check-modal"
+            />
+          </div>
+          <button class="btn__modal" type="submit" id="js-submit">
+            Register
+          </button>
+        </form>
+      </div>
+    </div> -->
+
     <!--? TASK 2 -->
-    <div class="disp">
+    <!-- <div class="disp">
       <button class="random-btn" type="submit" id="js-button">
         Згенерувати героя
       </button>
       <ul class="result" id="js-result"></ul>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- Завдання №1: "Розумний список справ" (To-Do List)
     Умова:
@@ -1846,13 +1900,19 @@
     </div>
 
 
+
+
+
 <!-- ? Notiflix -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.css"
     />
 
-    <script src="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.js"></script> -->
+
+    <!-- ? Chart.js -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
 
     <!-- ? Підключення бібліотеки  -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script> -->
