--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- ? -->
-
+    <input type="text" id="js-input" />
     <button id="js-button">Show</button>
     <ul id="js-list"></ul>
 
