--- a/index.html
+++ b/index.html
@@ -31,9 +31,23 @@
   </head>
   <body>
     <!-- ? -->
-    <input type="text" id="js-input" />
+
+    <!-- ? -->
+    <!-- <input id="userid-input" type="number" placeholder="ID користувача" />
+    <button id="search-btn">Знайти пости</button>
+    <ul id="results"></ul> -->
+    <!-- ? -->
+    <!-- <input id="limit-input" type="number" placeholder="Скільки постів?" />
+    <button id="posts-btn">Показати</button>
+    <ul id="posts-list"></ul> -->
+    <!-- ? -->
+    <!-- <input id="user-input" type="number" placeholder="ID користувача" />
+    <button id="user-btn">Знайти</button>
+    <div id="user-info"></div> -->
+    <!-- ? -->
+    <!-- <input type="text" id="js-input" />
     <button id="js-button">Show</button>
-    <ul id="js-list"></ul>
+    <ul id="js-list"></ul> -->
 
     <!-- ? -->
     <!-- <div class="container">
