--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
   </head>
   <body>
     <!-- ? -->
+    <input type="text" name="" id="js-input" />
+    <button id="js-btn">Пошук</button>
+    <div id="js-result"></div>
 
+    <!-- ? -->
+    <!-- <button id="js-btn">Факт</button>
+    <div id="js-fact"></div> -->
+    <!-- ? -->
+    <!-- <button id="search-btn">Знайти пости</button>
+    <div id="result"></div> -->
     <!-- ? -->
     <!-- <input id="userid-input" type="number" placeholder="ID користувача" />
     <button id="search-btn">Знайти пости</button>
@@ -1951,7 +1960,8 @@
     <!-- <script src="
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script> -->
-    <script type="module" src="./js/practice4.js"></script>
+    <!-- <script type="module" src="./js/practice4.js"></script> -->
+    <script type="module" src="./js/practice5.js"></script>
     <!-- <script type="module" src="./js/practice3.js"></script> -->
     <!-- <script type="module" src="./js/products.js"></script> -->
     <!-- <script type="module" src="./js/utils.js"></script> -->
