--- a/index.html
+++ b/index.html
@@ -31,9 +31,38 @@
   </head>
   <body>
     <!-- ? -->
-    <input type="text" name="" id="js-input" />
+    <input id="num1" type="number" />
+    <input id="num2" type="number" />
+    <button id="add">+</button>
+    <ul id="history"></ul>
+    <!-- ? -->
+    <!-- <button id="add-user">Додати користувача</button>
+    <div id="users-container"></div> -->
+    <!-- ? -->
+    <!-- <button id="load-dog">Завантажити собаку</button>
+    <div id="dogs-gallery"></div> -->
+    <!-- ? -->
+    <!-- <input id="text-input" placeholder="Натисни Enter..." />
+    <div id="enter-count">Разів натиснуто Enter: 0</div> -->
+    <!-- ? -->
+    <!-- <button id="add5">+5</button>
+    <div id="score">0</div>
+    <button id="add10">+10</button> -->
+    <!-- ? -->
+    <!-- <button id="increment">+1</button>
+    <div id="display">0</div>
+    <button id="reset">Скинути</button> -->
+    <!-- ? -->
+    <!-- <button id="minus-btn">-</button>
+    <span id="counter">0</span>
+    <button id="plus-btn">+</button> -->
+    <!-- ? -->
+    <!-- <button id="counter-btn">Клікни мене</button>
+    <div id="count-display"></div> -->
+    <!-- ? -->
+    <!-- <input type="text" name="" id="js-input" />
     <button id="js-btn">Пошук</button>
-    <div id="js-result"></div>
+    <div id="js-result"></div> -->
 
     <!-- ? -->
     <!-- <button id="js-btn">Факт</button>
