--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
   </head>
   <body>
     <!-- ? -->
-    <input id="num1" type="number" />
-    <input id="num2" type="number" />
-    <button id="add">+</button>
-    <ul id="history"></ul>
+
+    <!-- ! Бібліотека nano ID -->
+    <script src="https://cdn.jsdelivr.net/npm/nanoid@5.0.7/dist/nanoid.umd.js"></script>
+
+    <div id="box" style="width: 200px; height: 200px; background: red"></div>
+    <button id="change-color">Змінити колір</button>
     <!-- ? -->
     <!-- <button id="add-user">Додати користувача</button>
     <div id="users-container"></div> -->
@@ -1990,6 +1992,10 @@
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script> -->
     <!-- <script type="module" src="./js/practice4.js"></script> -->
+
+    <!-- ! Бібл NANO ID -->
+    <script src="https://cdn.jsdelivr.net/npm/nanoid@5.0.7/dist/nanoid.umd.js"></script>
+
     <script type="module" src="./js/practice5.js"></script>
     <!-- <script type="module" src="./js/practice3.js"></script> -->
     <!-- <script type="module" src="./js/products.js"></script> -->
