--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
   <body>
     <!-- ? -->
 
-    <input id="country-search" placeholder="Введи країну" />
-    <button id="search-btn">Шукати</button>
-    <div id="loader" style="display: none">⏳ Завантаження...</div>
-
-    <div id="result"></div>
     <!-- ? -->
     <!-- <div class="container">
       <div class="stats-board">
@@ -748,7 +743,7 @@
       /></label>
       <label
         >Border radius:
-        <input type="range" id="radius-range" min="0" max="50" value="0"
+        <input type="range" id
       /></label>
       <button id="reset-style-btn">Скинути стилі</button>
     </div> -->
