--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
   </head>
   <body>
     <!-- ? -->
+    <form id="js-form">
+      <input
+        type="text"
+        id="js-input"
+        placeholder="Що потрібно зробити?"
+        required
+      />
+      <button type="submit" id="js-submit">Додати завдання</button>
+    </form>
 
+    <ul id="js-list"></ul>
+
+    <!-- ? -->
+    <!-- <input type="text" id="js-input" />
+    <button id="js-btn">Пошук</button>
+    <div id="js-show"></div> -->
+    <!-- ? -->
+    <!-- <p id="js-show"></p>
+    <button id="js-btn">Показати повідомлення</button> -->
     <!-- ? -->
     <!-- <div class="container">
       <div class="stats-board">
@@ -743,7 +761,7 @@
       /></label>
       <label
         >Border radius:
-        <input type="range" id
+        <input type="range" id="radius-range" min="0" max="50" value="0"
       /></label>
       <button id="reset-style-btn">Скинути стилі</button>
     </div> -->
