--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- ? -->
-    <form id="js-form">
+    <!-- <form id="js-form">
       <input
         type="text"
         id="js-input"
@@ -41,7 +41,7 @@
       <button type="submit" id="js-submit">Додати завдання</button>
     </form>
 
-    <ul id="js-list"></ul>
+    <ul id="js-list"></ul> -->
 
     <!-- ? -->
     <!-- <input type="text" id="js-input" />
