--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
   </head>
   <body>
     <!-- ? -->
+    <div class="container">
+      <input
+        type="text"
+        id="search-input"
+        placeholder="Пошук героя (напр. Rick)..."
+      />
+
+      <div id="loader" style="display: none">Завантаження...</div>
+
+      <div id="characters-grid" class="grid"></div>
+    </div>
+    <!-- ? -->
+    <!-- <div class="advice-card">
+      <h1>Порада дня</h1>
+      <p id="advice-text">Натисніть кнопку, щоб отримати пораду...</p>
+      <button id="get-advice">Хочу пораду!</button>
+    </div> -->
+    <!-- ? -->
     <!-- <form id="js-form">
       <input
         type="text"
