--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- ? -->
-    <div class="container">
+    <!-- <div class="container">
       <input
         type="text"
         id="search-input"
@@ -41,7 +41,7 @@
       <div id="loader" style="display: none">Завантаження...</div>
 
       <div id="characters-grid" class="grid"></div>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- <div class="advice-card">
       <h1>Порада дня</h1>
