--- a/index.html
+++ b/index.html
@@ -31,6 +31,33 @@
   </head>
   <body>
     <!-- ? -->
+    <input
+      type="text"
+      id="search-input"
+      placeholder="Введіть ім'я (напр. Rick, Morty)..."
+    />
+    <div
+      id="characters-container"
+      style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px"
+    ></div>
+
+    <!-- ? -->
+    <!-- <input
+      type="text"
+      id="search-input"
+      placeholder="Введіть ім'я (напр. Rick)"
+    />
+    <div id="characters-container"></div> -->
+
+    <!-- ? -->
+    <!-- <ul id="user-list"></ul>
+    <button id="load-users">Завантажити список</button> -->
+    <!-- ? -->
+    <!-- <div id="advice-card">
+      <p id="advice-text">Тут буде твоя порада...</p>
+      <button id="get-advice">Отримати пораду</button>
+    </div> -->
+    <!-- ? -->
     <!-- <div class="container">
       <input
         type="text"
