--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -31,7 +31,34 @@
   </head>
   <body>
     <!-- ? -->
-    <input
+    <button id="load">Load list</button>
+    <ul id="list"></ul>
+
+    <!-- ? -->
+    <!-- <button id="btn">Fetch data</button>
+    <p id="status"></p>
+    <div id="showdiv"></div> -->
+
+    <!-- ? -->
+    <!-- <input type="number" id="post-id" />
+    <button id="load-post">Load</button>
+
+    <h3 id="post-title"></h3>
+    <p id="author-name"></p> -->
+    <!-- ? -->
+    <!-- <input type="text" id="search" />
+    <button id="search-btn">Search</button>
+
+    <div id="result"></div> -->
+
+    <!-- ? -->
+    <!-- <input type="number" id="user-id" placeholder="User ID" />
+    <button id="load-user">Load user</button>
+
+    <p id="user-name"></p>
+    <p id="user-email"></p> -->
+    <!-- ? -->
+    <!-- <input
       type="text"
       id="search-input"
       placeholder="Введіть ім'я (напр. Rick, Morty)..."
@@ -39,7 +66,7 @@
     <div
       id="characters-container"
       style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px"
-    ></div>
+    ></div> -->
 
     <!-- ? -->
     <!-- <input
