--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
   </head>
   <body>
     <!-- ? -->
-    <button id="load">Load list</button>
-    <ul id="list"></ul>
+
+    <input type="number" id="post-id" placeholder="Post ID" />
+    <button id="load-post">Load Post</button>
+    <p id="status"></p>
+    <div id="post-card"></div>
+
+    <!-- ? -->
+    <!-- <button id="load">Load list</button>
+    <ul id="list"></ul> -->
 
     <!-- ? -->
     <!-- <button id="btn">Fetch data</button>
