--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
   <body>
     <!-- ? -->
 
-    <input type="number" id="post-id" placeholder="Post ID" />
+    <!-- ? -->
+    <!-- <input type="text" id="search" placeholder="Enter character name" />
+    <button id="search-btn">Search</button>
+    <div id="results"></div>
+    <p id="status"></p> -->
+    <!-- ? -->
+
+    <!-- <input type="number" id="post-id" placeholder="Post ID" />
     <button id="load-post">Load Post</button>
     <p id="status"></p>
-    <div id="post-card"></div>
+    <div id="post-card"></div> -->
 
     <!-- ? -->
     <!-- <button id="load">Load list</button>
