--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   </head>
   <body>
     <!-- ? -->
-
+    <p id="result">0</p>
+    <button id="plus">Плюс</button>
+    <button id="minus">Мінус</button>
     <!-- ? -->
     <!-- <input type="text" id="search" placeholder="Enter character name" />
     <button id="search-btn">Search</button>
