--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
   </head>
   <body>
     <!-- ? -->
-    <p id="result">0</p>
+
+    <input type="text" name="" id="js-input" />
+    <button id="js-btn" type="button">Search</button>
+    <p id="js-status"></p>
+    <div id="js-show"></div>
+
+    <!-- ? -->
+    <!-- <p id="result">0</p>
     <button id="plus">Плюс</button>
-    <button id="minus">Мінус</button>
+    <button id="minus">Мінус</button> -->
     <!-- ? -->
     <!-- <input type="text" id="search" placeholder="Enter character name" />
     <button id="search-btn">Search</button>
