--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
   <body>
     <!-- ? -->
 
+    <!-- ? -->
+
+    <!-- <span class="loader"></span> -->
+
+    <!-- ? -->
+    <!-- 
     <input type="text" name="" id="js-input" />
     <button id="js-btn" type="button">Search</button>
     <p id="js-status"></p>
-    <div id="js-show"></div>
+    <div id="js-show"></div> -->
 
     <!-- ? -->
     <!-- <p id="result">0</p>
