--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
   </head>
   <body>
     <!-- ? -->
+    <h2>Users</h2>
 
+    <div id="users"></div>
+
+    <div class="pagination">
+      <button id="prev" disabled>Previous</button>
+      <span id="page-info"></span>
+      <button id="next">Next</button>
+    </div>
     <!-- ? -->
 
     <!-- <span class="loader"></span> -->
