--- a/index.html
+++ b/index.html
@@ -32,14 +32,31 @@
   <body>
     <!-- ? -->
     <h2>Users</h2>
+    <ul id="users-list"></ul>
+    <button id="load-more" hidden>Load More</button>
+    <div id="js-loader" class="hidden">Loading...</div>
+    <!-- ? -->
+    <!-- <button id="load-posts">Load Posts</button>
+    <ul id="posts"></ul>
+    <div id="js-loader" class="hidden">Loading...</div>
+    <button type="button" hidden id="js-more">Завантажити більше</button> -->
+    <!-- ? -->
+    <!-- <button id="load">Load users</button>
+    <ul id="users"></ul>
+    <div id="js-loader" class="hidden">Loading...</div> -->
+    <!-- ? -->
+    <!-- <h2>Users</h2>
 
     <div id="users"></div>
+
+    <div class="loader hidden" id="js-loader"></div>
 
     <div class="pagination">
       <button id="prev" disabled>Previous</button>
       <span id="page-info"></span>
       <button id="next">Next</button>
-    </div>
+    </div> -->
+
     <!-- ? -->
 
     <!-- <span class="loader"></span> -->
