--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
   </head>
   <body>
     <!-- ? -->
-    <h2>Users</h2>
+    <input id="js-input" type="text" placeholder="Search post..." />
+    <button id="search">Search</button>
+    <button id="more" hidden>Load more</button>
+
+    <ul id="js-list"></ul>
+    <div class="loader" hidden>Loading...</div>
+    <!-- ? -->
+    <!-- <input id="js-input" type="text" />
+    <ul id="js-list"></ul>
+    <div class="loader hidden"></div> -->
+    <!-- ? -->
+    <!-- <h2>Users</h2>
     <ul id="users-list"></ul>
     <button id="load-more" hidden>Load More</button>
-    <div id="js-loader" class="hidden">Loading...</div>
+    <div id="js-loader" class="hidden">Loading...</div> -->
     <!-- ? -->
     <!-- <button id="load-posts">Load Posts</button>
     <ul id="posts"></ul>
