--- a/index.html
+++ b/index.html
@@ -31,12 +31,22 @@
   </head>
   <body>
     <!-- ? -->
-    <input id="js-input" type="text" placeholder="Search post..." />
+    <input type="number" id="post-id" placeholder="Enter postId" />
+
+    <button id="search-btn">Search</button>
+    <button id="load-more" hidden>Load more</button>
+
+    <p id="loader" hidden>Loading...</p>
+
+    <ul id="comments"></ul>
+
+    <!-- ? -->
+    <!-- <input id="js-input" type="text" placeholder="Search post..." />
     <button id="search">Search</button>
     <button id="more" hidden>Load more</button>
 
     <ul id="js-list"></ul>
-    <div class="loader" hidden>Loading...</div>
+    <div class="loader" hidden>Loading...</div> -->
     <!-- ? -->
     <!-- <input id="js-input" type="text" />
     <ul id="js-list"></ul>
