--- a/index.html
+++ b/index.html
@@ -31,14 +31,24 @@
   </head>
   <body>
     <!-- ? -->
-    <input type="number" id="post-id" placeholder="Enter postId" />
+    <input id="user-id" type="number" placeholder="Enter userId" />
 
     <button id="search-btn">Search</button>
     <button id="load-more" hidden>Load more</button>
 
     <p id="loader" hidden>Loading...</p>
 
-    <ul id="comments"></ul>
+    <ul id="albums"></ul>
+
+    <!-- ? -->
+    <!-- <input type="number" id="post-id" placeholder="Enter postId" />
+
+    <button id="search-btn">Search</button>
+    <button id="load-more" hidden>Load more</button>
+
+    <p id="loader" hidden>Loading...</p>
+
+    <ul id="comments"></ul> -->
 
     <!-- ? -->
     <!-- <input id="js-input" type="text" placeholder="Search post..." />
