--- a/index.html
+++ b/index.html
@@ -31,29 +31,36 @@
   </head>
   <body>
     <!-- ? -->
-    <input id="searchInput" type="text" placeholder="Введи ім'я..." />
+    <div>
+      <input
+        type="text"
+        id="usernameInput"
+        placeholder="Введи GitHub username"
+      />
+      <button id="fetchBtn">Отримати профіль</button>
+    </div>
+
+    <div id="userProfile">
+      <!-- Тут з'являться дані про користувача -->
+    </div>
+    <!-- ? -->
+    <!-- <input id="searchInput" type="text" placeholder="Введи ім'я..." />
     <button id="btnSearch">Search</button>
     <div id="loader" hidden>Loading...</div>
     <p id="totalCount">Total find:</p>
     <ul id="usersList"></ul>
     <button id="btnLoadMore" hidden>Load more</button>
-    <p id="endMessage" hidden>Всіх користувачів завантажено!</p>
-
+    <p id="endMessage" hidden>Всіх користувачів завантажено!</p> -->
     <!-- ? -->
     <!-- <input type="number" id="post-id" placeholder="Enter postId" />
-
     <button id="search-btn">Search</button>
     <button id="load-more" hidden>Load more</button>
-
     <p id="loader" hidden>Loading...</p>
-
     <ul id="comments"></ul> -->
-
     <!-- ? -->
     <!-- <input id="js-input" type="text" placeholder="Search post..." />
     <button id="search">Search</button>
     <button id="more" hidden>Load more</button>
-
     <ul id="js-list"></ul>
     <div class="loader" hidden>Loading...</div> -->
     <!-- ? -->
