--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
   </head>
   <body>
     <!-- ? -->
-    <div>
-      <input
-        type="text"
-        id="usernameInput"
-        placeholder="Введи GitHub username"
-      />
-      <button id="fetchBtn">Отримати профіль</button>
+
+    <!-- ? -->
+    <!-- <div>
+      <input type="text" id="usernameInput" placeholder="GitHub username" />
+      <button id="fetchBtn">Знайти репозиторії</button>
     </div>
 
-    <div id="userProfile">
-      <!-- Тут з'являться дані про користувача -->
-    </div>
+    <ul id="repoList"></ul> -->
+    <!-- ? -->
+    <!-- <div>
+  <input type="text" id="usernameInput" placeholder="Введи GitHub username" />
+  <button id="fetchBtn">Отримати профіль</button>
+</div>
+
+<div id="userProfile">
+</div> -->
     <!-- ? -->
     <!-- <input id="searchInput" type="text" placeholder="Введи ім'я..." />
     <button id="btnSearch">Search</button>
