--- a/index.html
+++ b/index.html
@@ -30,8 +30,27 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <section>
+      <h2>Products</h2>
+      <p id="loading" hidden>Loading...</p>
+      <div id="products"></div>
+    </section>
     <!-- ? -->
 
+    <!-- <section>
+      <h2>GitHub Search</h2>
+      <input id="githubInput" placeholder="GitHub username" />
+      <button id="githubBtn">Search</button>
+
+      <div id="githubResult"></div>
+      <p id="githubError"></p>
+    </section> -->
+    <!-- ? -->
+    <!-- <section>
+      <h2>Users</h2>
+      <ul id="usersList"></ul>
+      <button id="js-btn" type="button">Load User</button>
+    </section> -->
     <!-- ? -->
     <!-- <div>
       <input type="text" id="usernameInput" placeholder="GitHub username" />
