--- a/index.html
+++ b/index.html
@@ -30,11 +30,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- ? -->
+
     <section>
+      <h2>Weather</h2>
+      <input id="cityInput" placeholder="Enter city" />
+      <button id="weatherBtn">Get weather</button>
+
+      <div id="weatherResult"></div>
+      <p id="weatherError"></p>
+    </section>
+
+    <!-- ? -->
+
+    <!-- <section>
       <h2>Products</h2>
       <p id="loading" hidden>Loading...</p>
       <div id="products"></div>
-    </section>
+    </section> -->
     <!-- ? -->
 
     <!-- <section>
