--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- ? -->
-
+    <!-- 
     <section>
       <h2>Weather</h2>
       <input id="cityInput" placeholder="Enter city" />
@@ -39,7 +39,7 @@
 
       <div id="weatherResult"></div>
       <p id="weatherError"></p>
-    </section>
+    </section> -->
 
     <!-- ? -->
 
@@ -2229,7 +2229,8 @@ https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script> -->
     <!-- <script type="module" src="./js/practice4.js"></script> -->
 
-    <script type="module" src="./js/practice5.js"></script>
+    <!-- <script type="module" src="./js/practice5.js"></script> -->
+    <script type="module" src="./js/practice6.js"></script>
     <!-- <script type="module" src="./js/practice3.js"></script> -->
     <!-- <script type="module" src="./js/products.js"></script> -->
     <!-- <script type="module" src="./js/utils.js"></script> -->
