--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>"
+    />
     <title>Document</title>
 
     <!-- <link
@@ -30,6 +34,28 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- ? -->
+    <h2 id="counter">0</h2>
+    <button id="increment">+</button>
+    <button id="decrement">-</button>
+    <button id="reset">Reset</button>
+
+    <p id="quote">Цитата з’явиться тут</p>
+    <!-- ? -->
+    <!-- <h2 id="counter">0</h2>
+    <button id="increment">+</button>
+    <button id="decrement">-</button>
+    <button id="reset">reset</button> -->
+
+    <!-- ? -->
+    <!-- <div id="box">Box</div>
+    <button id="toggleBtn">Toggle class</button> -->
+    <!-- ? -->
+    <!-- <p id="colorText">Make me red</p>
+    <button id="colorBtn">Change color</button> -->
+    <!-- ? -->
+    <!-- <p id="text">Old text</p>
+    <button id="btn">Change text</button> -->
     <!-- ? -->
     <!-- 
     <section>
