--- a/index.html
+++ b/index.html
@@ -35,12 +35,22 @@
   </head>
   <body>
     <!-- ? -->
-    <h2 id="counter">0</h2>
-    <button id="increment">+</button>
-    <button id="decrement">-</button>
-    <button id="reset">Reset</button>
+    <h1>Погода</h1>
+    <input id="city" placeholder="Введи місто українською або англійською" />
+    <button id="get-weather">Показати погоду</button>
 
-    <p id="quote">Цитата з’явиться тут</p>
+    <div id="result" style="margin-top: 30px; font-size: 1.3rem"></div>
+    <!-- ? -->
+    <!-- <div
+      style="text-align: center; padding: 40px; max-width: 600px; margin: auto"
+    >
+      <h1>Chuck Norris Jokes</h1>
+      <button id="new-joke">Новий жарт!</button>
+      <p
+        id="joke"
+        style="font-size: 1.4rem; margin-top: 30px; min-height: 80px"
+      ></p>
+    </div> -->
     <!-- ? -->
     <!-- <h2 id="counter">0</h2>
     <button id="increment">+</button>
