--- a/index.html
+++ b/index.html
@@ -35,11 +35,38 @@
   </head>
   <body>
     <!-- ? -->
-    <h1>Погода</h1>
+    <!-- ! my custom API -->
+    <div class="wrap">
+      <ul class="list">
+        <li class="list-item title">
+          <p class="title">Title</p>
+          <p class="title-dscr" id="js-title"></p>
+        </li>
+        <li class="list-item difficulty">
+          <p class="difficulty">Difficulty</p>
+          <p class="difficulty-dscr" id="js-difficulty"></p>
+        </li>
+        <li class="list-item category">
+          <p class="category">Category</p>
+          <p class="category-dscr" id="js-category"></p>
+        </li>
+        <li class="list-item example">
+          <p class="example">Example</p>
+          <p class="example-dscr" id="js-example"></p>
+        </li>
+        <li class="list-item explanation">
+          <p class="explanation">Explanation</p>
+          <p class="explanation-dscr" id="js-explanation"></p>
+        </li>
+        <button class="show-btn" id="js-btn">Show liveHack</button>
+      </ul>
+    </div>
+    <!-- ? -->
+    <!-- <h1>Погода</h1>
     <input id="city" placeholder="Введи місто українською або англійською" />
     <button id="get-weather">Показати погоду</button>
 
-    <div id="result" style="margin-top: 30px; font-size: 1.3rem"></div>
+    <div id="result" style="margin-top: 30px; font-size: 1.3rem"></div> -->
     <!-- ? -->
     <!-- <div
       style="text-align: center; padding: 40px; max-width: 600px; margin: auto"
